fix text getting cut off at medium screen size. closes #100

--- a/less/app.less
+++ b/less/app.less
@@ -470,11 +470,16 @@ body, h1, h2, h3, h4, h5, h6, p, li {
         width: 35%;
         background: #111;
         background: @shade-bg;
-        padding: 15px 20px 25px 20px;
+        padding: 20px 20px 25px 20px;
         position: absolute;
-        bottom: 5%;
         left: 0;
+        bottom: 0;
+        top: 0;
     }
+    @media @screen-medium-above {
+        bottom: 5%;
+        top: auto;
+    }    
 
     a {
         color: #fff;
@@ -483,38 +488,45 @@ body, h1, h2, h3, h4, h5, h6, p, li {
     h2 {
         color: #fff;
         font-weight: bold;
-        margin-bottom: 11px;
+        margin: 0 0 11px 0;
         letter-spacing: -0.05em;
         font-size: 30px;
 
         @media @screen-medium-above { font-size: 48px; }
-        @media @screen-medium { font-size: 42px; }
+        @media @screen-medium { font-size: 34px; }
         @media @screen-small { font-size: 32px; }
     }
     h3 {
-        font-size: 12px;
         font-weight: bold;
         text-transform: uppercase;
         color: #ccc;
         margin-bottom: 11px;
+        font-size: 10px;
+
+        @media @screen-medium-above { font-size: 12px; }
     }
     p {
         margin: 0 0 11px 0;
-        line-height: 1.5;
+        line-height: 1.4;
         font-size: 14px;
 
-        @media @screen-small-above { font-size: 16px; }
+        @media @screen-medium-above { 
+            font-size: 16px;
+            line-height: 1.5;
+        }
 
         &.dates { font-style: italic; }
         &.desc { margin-bottom: 20px; }
         &.now-playing {
             font-size: 12px;
+            line-height: 1.2;
             color: #aaa;
             margin-top: 20px;
             margin-bottom: 5px;
         }
         &.photo-credit {
             font-size: 12px;
+            line-height: 1.3;
             color: #aaa;
             margin-bottom: 0;
         }
@@ -522,9 +534,11 @@ body, h1, h2, h3, h4, h5, h6, p, li {
         &.npr-artist {
             font-weight: normal;
             font-style: normal;
-            font-size: 14px;
             color: #aaa;
             margin-bottom: 5px;
+            font-size: 12px;
+
+            @media @screen-medium-above { font-size: 14px; }
         }
     }
 
@@ -535,7 +549,7 @@ body, h1, h2, h3, h4, h5, h6, p, li {
     .panel-janos-starker &,
     .panel-chris-kelly &,
     .panel-mulgrew-miller &,
-    .panel-bobby-blue-bland &,
+    .panel-bobby-ldquobluerdquo-bland &,
     .panel-kongarol-ondar &,
     .panel-george-duke &,
     .panel-cedar-walton &,
